<resources>
	
    <string name="Main">Main page</string>
    
    <string name="login">Sign In</string>
    <string name="logout">Sign Out</string>
    <string name="Login">Sign In</string>
    
    <string name="create_user">Register</string>
    <string name="email">Username</string>
    <string name="password">Password</string>
    <string name="passwd">Password</string>
    <string name="firstName">Firstname</string>
    <string name="lastName">Lastname</string>
    <string name="address">Address</string>
    <string name="phoneNumber">Phone Number</string>
    
    <string name="app_name">Marcani Motorsports</string>
    
    
    <string name="create_products">New product</string>

    <string name="product_name">Name</string>
	<string name="product_description">Description</string>
    <string name="product_cost">Cost</string>
    <string name="product_category">Category</string>
    
    <string name="products">Products</string>
	
    <string name="categories">Categories</string>
    
    <string name="create">Create</string>

    <string name="list_all_products">All products</string>
    
    <string name="create_category">New category</string>
    
    <string name="category_name">Name</string>

    <string name="category_description">Description</string>
    
    <string name="like">Like</string>
    
    <string name="list_all_categories">All categories</string>
    
    <string name="list_all_cart">Basket</string>
    
    <string name="list_all_orders">All categories</string>
    
    <string name="list_categories">All the categories</string>
    
    <string name="SUBMIT">Submit</string>
    
    <string name="edit">Buy</string>
    
    <string name="delete">Delete</string>
    
    <string name="order">Order</string>
    
    <string name="orders">Orders</string>
    
    
    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

</resources>
