<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/create_user" android:icon="@drawable/laferrari" android:title="@string/create_user"/>
    <item android:id="@+id/login" android:icon="@drawable/laferrari" android:title="@string/login"/>
    <item android:id="@+id/logout" android:icon="@drawable/laferrari" android:title="@string/logout"/>
    <item android:id="@+id/create_products" android:icon="@drawable/laferrari" android:title="@string/create_products"/>
    <item android:id="@+id/list_all_products" android:icon="@drawable/laferrari" android:title="@string/list_all_products"/>
    <item android:id="@+id/create_category" android:icon="@drawable/laferrari" android:title="@string/create_category"/>
    <item android:id="@+id/list_all_categories" android:icon="@drawable/laferrari" android:title="@string/list_all_categories"/>
    <item android:id="@+id/list_all_cart" android:icon="@drawable/laferrari" android:title="@string/list_all_cart"/>
    <item android:id="@+id/list_all_orders" android:icon="@drawable/laferrari" android:title="@string/order"/>
</menu>
