<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home" 
    android:orientation="vertical" >
  	
    <TextView 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content"   
    	android:text="@string/create_user"
    	android:textSize="20sp"
    	android:textStyle="bold"
    	android:layout_marginLeft="30dp"
    />
    
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginBottom="10dp" 
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edittext_rounded_corners"  />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginBottom="10dp" 
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edittext_rounded_corners"  />
    
    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstName"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
       	android:background="@drawable/edittext_rounded_corners"  />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastName"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edittext_rounded_corners"  />
    
    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edittext_rounded_corners"  />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phoneNumber"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edittext_rounded_corners"  />

    <Button 
        android:id="@+id/create_user"
        android:textColor="#FFFFFF"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp" 
        android:layout_marginLeft="30dp"
        android:background="@drawable/button_rounded_corners" 
    	android:text="@string/SUBMIT"
    />

</LinearLayout>
