<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home" 
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_products"
        android:layout_marginLeft="30dp" 
        android:textSize="20sp"
        android:textStyle="bold"/>
    	
         
    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name" 
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" 
        android:background="@drawable/edittext_rounded_corners"  />

     <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_description"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" 
        android:background="@drawable/edittext_rounded_corners"   />
     
    <EditText
        android:id="@+id/product_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_cost"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" 
        android:background="@drawable/edittext_rounded_corners"  />

    <Spinner
        android:id="@+id/list_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded_corners" 
        android:textColor="#8F0000"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/list_categories" 
         />

    <Button
        android:id="@+id/create_products"
        android:textColor="#FFFFFF"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp" 
        android:layout_marginLeft="30dp"
        android:background="@drawable/button_rounded_corners"  
        android:text="@string/SUBMIT" />
    
    

</LinearLayout>
