<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home" 
    android:orientation="vertical" >
  	
    <TextView 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content"   
    	android:text="@string/create_category"
    	android:textSize="20sp"
    	android:textStyle="bold"
    	android:layout_marginLeft="30dp"
    />
    
    <EditText
        android:id="@+id/category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_name"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edittext_rounded_corners" />

    <EditText
        android:id="@+id/category_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_description"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edittext_rounded_corners" />
    
    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:id="@+id/imgViewContactImage"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/borders" 
        android:src="@drawable/car_logo" />
    
    <Button 
        android:id="@+id/create_category"
        android:textColor="#FFFFFF"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" 
        android:layout_marginLeft="30dp"
        android:background="@drawable/button_rounded_corners" 
    	android:text="@string/SUBMIT"
    />
    
</LinearLayout>
